# mealie-mcp

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: renovate.json
.github/workflows/: build-publish.yaml  build-tag-release.yaml  pr-verify.yaml  tag-updates.yaml
mealie_mcp/: meal_plans.py  recipes.py  server.py  shopping_lists.py
src/: .dockerignore  Dockerfile  pyproject.toml
src/mealie-mcp/: __init__.py  __main__.py  log.py  main.py  meal_plans.py  mealie_client.py  recipes.py  shopping_lists.py
src/mealie_mcp/: mealie_client.py  mealie_logger.py  recipes.py  server.py
