[project]
name = "mealie_mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.2.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/mealie_mcp"]

[project.scripts]
mealie_mcp = "mealie_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"